tryna fix on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@
     }
     .Card{
         width: 80vw;
-        height: 80vw;
+        height: fit-content;
         padding-bottom: 5vh;
     }
     .input{
